--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -2,7 +2,7 @@
   "docsets_to_publish": [
     {
       "docset_name": "xamarin-communitytoolkit",
-      "build_source_folder": "xamarin-communitytoolkit",
+      "build_source_folder": "docs",
       "build_output_subfolder": "xamarin-communitytoolkit",
       "locale": "en-us",
       "monikers": [],
@@ -40,7 +40,6 @@
   "branch_target_mapping": {
     "live": [
       "Publish",
-      "Intellisense",
       "Pdf"
     ]
   },
