--- a/docs/breadcrumb/toc.yml
+++ b/docs/breadcrumb/toc.yml
@@ -5,6 +5,7 @@
   - name: Xamarin
     tocHref: /xamarin/
     topicHref: /xamarin
+    items:
     - name: Xamarin Community Toolkit
       tocHref: /xamarin/communitytoolkit/
       topicHref: /xamarin/communitytoolkit
