--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -1,2 +1,18 @@
-- name: Index
+- name: Xamarin.CommunityToolkit
   href: index.md
+- name: Get Started
+  href: get-started.md
+- name: Behaviors
+  href: behaviors.md
+- name: Converters
+  href: converters.md
+- name: Effects
+  href: effects.md
+- name: Extensions
+  href: extensions.md
+- name: Helpers
+  href: helpers.md
+- name: Views
+  href: views.md
+- name: Troubleshooting
+  href: troubleshooting.md
