--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -5,7 +5,17 @@
     - name: "Getting Started with the Xamarin Community Toolkit"
       href: get-started.md
 - name: "Behaviors"
-  href: behaviors/toc.yml #behaviors.md
+  items:
+    - name: Email Validation Behavior
+      href: behaviors/emailvalidationbehavior.md
+    - name: EventToCommandBehavior
+      href: behaviors/eventtocommandbehavior.md
+    - name: NumericValidationBehavior
+      href: behaviors/numericvalidationbehavior.md
+    - name: TextValidationBehavior
+      href: behaviors/textvalidationbehavior.md
+    - name: ValidationBehavior
+      href: behaviors/validationbehavior.md
 - name: "Converters"
   items:
     - name: BoolToObjectConverter
