--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -68,5 +68,7 @@
   items:
     - name: "AvatarView"
       href: views/avatarview.md
+    - name: "StateLayout"
+      href: views/statelayout.md
 - name: "Troubleshooting"
   href: troubleshooting.md
