--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -63,7 +63,19 @@
     - name: "TranslateExtension"
       href: extensions/translateextension.md
 - name: "Helpers"
-  href: helpers.md
+  items:
+    - name: "DelegateWeakEventManager"
+      href: helpers/delegateweakeventmanager.md
+    - name: "WeakEventManager<T>"
+      href: helpers/weakeventmanagert.md
+    - name: "WeakEventManagerExtensions"
+      href: helpers/weakeventmanagerextensions.md
+- name: "ObjectModel"
+  items:
+    - name: "AsyncCommand"
+      href: objectmodel/asynccommand.md
+    - name: "AsyncValueCommand"
+      href: objectmodel/asyncvaluecommand.md
 - name: "Views"
   items:
     - name: "AvatarView"
