Add DelegateWeakEventManager, WeakEventManager<T>, AsyncCommand & AsyncValueCommand (#30)
* Add DelegateWeakEventManager and WeakEventManager<T>

* Add DelegateWeakEventManager, WeakEventManager<T>, WeakEventManagerExtensions, AsyncCommand, AsyncValueCommand

* Update delegateweakeventmanager.md

* Fix docs references

* Update delegateweakeventmanager.md

* Update delegateweakeventmanager.md

* Update weakeventmanagerextensions.md

* Update delegateweakeventmanager.md

* Update delegateweakeventmanager.md

* Update weakeventmanagert.md

* Update asynccommand.md

* Update asyncvaluecommand.md

Co-authored-by: David Britch <davidbritch@users.noreply.github.com>

--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -65,6 +65,19 @@
     - name: "TranslateExtension"
       href: extensions/translateextension.md
 - name: "Helpers"
+  items:
+    - name: "DelegateWeakEventManager"
+      href: helpers/delegateweakeventmanager.md
+    - name: "WeakEventManager<T>"
+      href: helpers/weakeventmanagert.md
+    - name: "WeakEventManagerExtensions"
+      href: helpers/weakeventmanagerextensions.md
+- name: "ObjectModel"
+  items:
+    - name: "AsyncCommand"
+      href: objectmodel/asynccommand.md
+    - name: "AsyncValueCommand"
+      href: objectmodel/asyncvaluecommand.md
 - name: "Views"
   items:
     - name: "AvatarView"
