Add documentation for C# Markup (#29)
* Add markup.md with content from https://raw.githubusercontent.com/MicrosoftDocs/xamarin-docs/live/docs/xamarin-forms/user-interface/csharp-markup.md

* update markup.md for features that were already in Forms
add download.png from Forms docs

* add documentation from https://github.com/xamarin/Xamarin.Forms/pull/11428 and update for XCT
eliminate repetitive namespace usings

* add markup entries to index and TOC

* fix doc validation warnings

* small formatting and wording improvements

* Update markup.md

* Tidy up.

Co-authored-by: Vincent Hoogendoorn <dev@vincenth.net>
Co-authored-by: David Britch <davidbritch@users.noreply.github.com>

--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -78,6 +78,8 @@
       href: objectmodel/asynccommand.md
     - name: "AsyncValueCommand"
       href: objectmodel/asyncvaluecommand.md
+- name: "Markup"
+  href: markup.md
 - name: "Views"
   items:
     - name: "AvatarView"
