--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -83,8 +83,10 @@
 - name: "Views"
   items:
     - name: "AvatarView"
-      href: views/avatarview.md
+      href: views/avatarview.md      
     - name: "CameraView"
       href: views/cameraview.md
+    - name: "StateLayout"
+      href: views/statelayout.md
 - name: "Troubleshooting"
   href: troubleshooting.md
