--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -85,9 +85,11 @@
 - name: "Views"
   items:
     - name: "AvatarView"
-      href: views/avatarview.md 
+      href: views/avatarview.md
     - name: "CameraView"
       href: views/cameraview.md
+    - name: "Expander"
+      href: views/expander.md
     - name: "MediaElement"
       href: views/mediaelement.md      
     - name: "StateLayout"
