--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -91,7 +91,9 @@
     - name: "Expander"
       href: views/expander.md
     - name: "MediaElement"
-      href: views/mediaelement.md      
+      href: views/mediaelement.md
+    - name: "RangeSlider"
+      href: views/rangeslider.md
     - name: "StateLayout"
       href: views/statelayout.md
 - name: "Troubleshooting"
