--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -118,5 +118,7 @@
       href: views/shield.md
     - name: "StateLayout"
       href: views/statelayout.md
+    - name: "UniformGrid"
+      href: views/uniformgrid.md
 - name: "Troubleshooting"
   href: troubleshooting.md
