--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -118,6 +118,8 @@
       href: views/shield.md
     - name: "StateLayout"
       href: views/statelayout.md
+    - name: "TabView"
+      href: views/tabview.md
     - name: "UniformGrid"
       href: views/uniformgrid.md
 - name: "Troubleshooting"
