--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -122,7 +122,7 @@
       href: views/tabview.md
     - name: "UniformGrid"
       href: views/uniformgrid.md
-    - name: LazyView
+    - name: "LazyView"
       href: views/lazyview.md
 - name: "Troubleshooting"
   href: troubleshooting.md
