--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -90,6 +90,8 @@
       href: helpers/weakeventmanagert.md
     - name: "WeakEventManagerExtensions"
       href: helpers/weakeventmanagerextensions.md
+    - name: "LocalizationResourceManager"
+      href: helpers/localizationresourcemanager.md
 - name: "ObjectModel"
   items:
     - name: "AsyncCommand"
