Add CommandFactory Documentation (#85)
* Create commandfactory.md

* Addd Syntax and Sample project

* Update TOC.yml

* Remove line number

* Fix sample app link

* Update TOC.yml

* Update commandfactory.md

* Update links to point to main branch

Co-authored-by: David Britch <davidbritch@users.noreply.github.com>

--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -102,6 +102,8 @@
       href: objectmodel/asynccommand.md
     - name: "AsyncValueCommand"
       href: objectmodel/asyncvaluecommand.md
+    - name: "CommandFactory"
+      href: objectmodel/commandfactory.md
 - name: "Markup"
   href: markup.md
 - name: "Views"
