--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -92,6 +92,8 @@
   items:
     - name: "DelegateWeakEventManager"
       href: helpers/delegateweakeventmanager.md
+    - name: "LocalizedString"
+      href: helpers/localizedstring.md 
     - name: "WeakEventManager<T>"
       href: helpers/weakeventmanagert.md
     - name: "WeakEventManagerExtensions"
