Add LocalizationResourceManager Documentation (Updated to 1.1.0) (#105)
* Add LocalizationResourceManager docs.

* Fix list style

* Uncomment references to released features

* Remove deprecated methods

* Update translateextension.md

* Remove LocalizedString links

* Try add some LocalizedString links

* Update localizationresourcemanager.md

Co-authored-by: David Britch <davidbritch@users.noreply.github.com>

--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -92,6 +92,8 @@
   items:
     - name: "DelegateWeakEventManager"
       href: helpers/delegateweakeventmanager.md
+    - name: "LocalizationResourceManager"
+      href: helpers/localizationresourcemanager.md         
     - name: "LocalizedString"
       href: helpers/localizedstring.md 
     - name: "WeakEventManager<T>"
