Added docs for MathExpressionConverter (#111)
* Added docs for MathExpressionConverter

* Update mathexpressionconverter.md

* Update mathexpressionconverter.md

* Update mathexpressionconverter.md

* Update mathexpressionconverter.md

* Update mathexpressionconverter.md

* Use xrefs.

* Update mathexpressionconverter.md

* Update mathexpressionconverter.md

Co-authored-by: Matthew S <sattew@yandex.com>
Co-authored-by: Gerald Versluis <gerald@verslu.is>
Co-authored-by: David Britch <davidbritch@users.noreply.github.com>

--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -70,6 +70,8 @@
       href: converters/listisnulloremptyconverter.md
     - name: ListToStringConverter
       href: converters/listtostringconverter.md
+    - name: MathExpressionConverter
+      href: converters/mathexpressionconverter.md
     - name: MultiConverter
       href: converters/multiconverter.md
     - name: NotEqualConverter
