Added StringToListConverter Documentation (#109)
* Added StringToListConverter Documentation

* Added an entry for StringToListConverter

* Added Properties

* Fixed property type text not showing as it should

* Added the author github link

* removed the author link

* Updated Separators Type

* Update content not showing chevrons

* Update stringtolistconverter.md

* Update stringtolistconverter.md

Co-authored-by: Gerald Versluis <gerald@verslu.is>
Co-authored-by: David Britch <davidbritch@users.noreply.github.com>

--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -80,6 +80,8 @@
       href: converters/textcaseconverter.md
     - name: VariableMultiValueConverter
       href: converters/variablemultivalueconverter.md
+    - name: StringToListConverter
+      href: converters/stringtolistconverter.md
 - name: "Effects"
   items:
     - name: "LifecycleEffect"
