--- a/docs/breadcrumb/toc.yml
+++ b/docs/breadcrumb/toc.yml
@@ -2,10 +2,14 @@
   tocHref: /
   topicHref: /
   items:
-  - name: Xamarin
-    tocHref: /xamarin/
-    topicHref: /xamarin/
+  - name: Previous Versions
+    tocHref: /previous-versions/
+    topicHref: /previous-versions/
     items:
-    - name: Xamarin Community Toolkit
-      tocHref: /xamarin/community-toolkit/
-      topicHref: /xamarin/community-toolkit/
+    - name: Xamarin
+      tocHref: /previous-versions/xamarin/
+      topicHref: /previous-versions/xamarin/
+      items:
+      - name: Xamarin Community Toolkit
+        tocHref: /previous-versions/xamarin/community-toolkit/
+        topicHref: /previous-versions/xamarin/community-toolkit/
